   distributed with Daikon, but you can build it by executing the command
     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

5.8.6 (forthcoming)

DynComp handles lambdas (Java anonymous functions).
Removed (unused) DynComp option --no-primitives.

===========================================================================

5.8.4 (July 22, 2020)

Moved the SplitDtrace class from the unnamed package to the daikon/ package.

Chicory and DynComp:
- Improved support for old class files (e.g., compiled by Java 5).

Fjalar/Kvasir:
- Added support for systems with a secondary target of X86.
- Added support for binaries generated by the clang compiler.
- Improved documentation on gcc compiler options.
- Updated the underlying Binutils infrastructure to version 2.34.

===========================================================================

5.8.2 (May 4, 2020)

Improved installation instructions.

Updated Valgrind from 3.14.0 to 3.15.0.

===========================================================================

5.8.0 (April 14, 2020)

Daikon runs under both Java 8 and Java 11.

Running Daikon is no longer supported on Windows or Cygwin.  Use Windows
Subsystem for Linux (WSL) instead.  You can still run a front end on
Windows to generate a trace file, but you should run Daikon on a Unix-like
system to process that trace file.  We welcome community support for the
Windows and Cygwin operating systems.

Daikon no longer requires the JAVA_HOME environment variable to be set,
if the `javac` executable is on the path.

Updated the readelf, Valgrind, and BCEL libraries.  This should improve
compatibility with operating systems and C versions.

===========================================================================

5.7.2 (November 7, 2018)

The Daikon instructions no longer suggest to set CLASSPATH, which is bad