@@ -23,7 +23,10 @@ Further documentation can be found in:
 5.8.6 (forthcoming)
 
 DynComp handles lambdas (Java anonymous functions).
-Removed (unused) DynComp option --no-primitives.
+
+Removed DynComp option --no-primitives.
+
+Removed support for the obsolete Version 1 file format.
 
 ===========================================================================
 
